--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.mbassy</groupId>
     <artifactId>mbassador-spring</artifactId>
-    <version>1.0.0.beta</version>
+    <version>1.0.0.beta-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>mbassador-spring</name>
     <description>Module for integrating MBassador message bus in Spring environment.</description>
